@@ -10,4 +10,4 @@ RDEPEND=dev-util/cmake >=dev-libs/openssl-1.0 media-libs/alsa-lib media-libs/lib
 SLOT=0
 SRC_URI=https://github.com/Homer-Conferencing/Homer-Conferencing/archive/V0.25.tar.gz -> homer-0.25.tar.gz http://dev.gentoo.org/~hwoarang/distfiles/homer-0.25-ffmpeg2.patch
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4
-_md5_=aaa4c41405fe27a86f90b4689b2a680f
+_md5_=2a6d4d85c605e34c39eb82d2e8da7068
